--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <div id="root"></div>
+
+
+    <!-- to remove error in Vite   -->
+    <script> 
+      var global = global || window;
+    </script>
+    
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
